@@ -1,4 +1,9 @@
 
+2017-07-14  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* Makefile.am: added some hacks for make not supporting $> and $(D>),
+	  make tests works there (again) as long as newcob.val is in builddir
+
 2017-06-30  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* Makefile.am: separated rule for newcob.val.Z and make sure that
